--- a/Underline Strikethrough.roboFontExt/info.plist
+++ b/Underline Strikethrough.roboFontExt/info.plist
@@ -26,9 +26,9 @@
 	<key>name</key>
 	<string>Underline Strikethrough</string>
 	<key>timeStamp</key>
-	<real>1404236490.6367011</real>
+	<real>1421681311</real>
 	<key>version</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>repository</key>
 	<string>Typefounding/underlineStrikethrough</string>
 </dict>
