--- a/Underline Strikethrough.roboFontExt/info.plist
+++ b/Underline Strikethrough.roboFontExt/info.plist
@@ -14,7 +14,7 @@
 		</dict>
 	</array>
 	<key>developer</key>
-	<string>Ben Kiel</string>
+	<string>Ben Kiel, Ryan Bugden</string>
 	<key>developerURL</key>
 	<string>http://www.typefounding.com</string>
 	<key>html</key>
